fixing snow canvas element on mobile

--- a/style.styl
+++ b/style.styl
@@ -312,9 +312,11 @@ img, video
 // __snow
 #snow
 	position absolute
+	top 0
+	left 0
 	width 100%
-	height 600px
+	height 100vh
 	@media screen and (min-width: 768px)
-		height 800px
+		height 100vh
 	background-color transparent
 	z-index 9997
